@@ -1,3 +1,7 @@
+2012-08-20  Shigeki Morimoto  <shigeki.morimoto@mixi.co.jp>
+	* Changes version 0.1010 release.
+	Dirty quich hack for Parse::RecDescent new version. ;-(
+
 2012-08-19  Shigeki Morimoto  <shigeki.morimoto@mixi.co.jp>
 	* Changes version 0.1009 release.
 	nothing changeed...
